[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/fullscreen/guageNoDial.png" type="Texture" id=1]
[ext_resource path="res://assets/art/interactive/interactive/guageDial.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/FSPressure.gd" type="Script" id=3]
[ext_resource path="res://assets/art/interactive/interactive/key2.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GuageDial:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 248, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GuageDial:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "pressure"
tracks/0/type = "value"
tracks/0/path = NodePath("GuageDial:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 248, 200 ), Vector2( 368, 168 ), Vector2( 480, 192 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GuageDial:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 21.1716, 70.7493 ]
}

[node name="Pressure" type="Popup"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Guage" type="Sprite" parent="."]
position = Vector2( 416, 264 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="GuageDial" type="Sprite" parent="."]
position = Vector2( 248, 200 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/pressure = SubResource( 2 )

[node name="Key2" type="Sprite" parent="."]
position = Vector2( 392, 360 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[connection signal="about_to_show" from="." to="." method="_on_Pressure_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_Pressure_popup_hide"]
